--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>ІП-23 Табачук Д.Л. Лаб8, В21</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
